src/About.css
.about {
  /* Keep width/padding in sync with .intro in Intro.css */
  align-items: center;
  position: relative;
  max-width: 840px;
  margin: 50px auto;
  padding: 0 40px 100px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;

  /* fonts */
  font-weight: 300;
  line-height: 1.8em;
}

.about-block {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 100px auto;
}

.about-block.block-A {
  padding-top: 50px;
  margin-bottom: 50px;
}

.about-block.image-block {
  align-items: stretch;
  justify-content: flex-start;
  /* NOTE: Use negative margin of 10px since the images have 10px padding */
  margin: 0 -10px 100px;
}

.about-caption {
  word-wrap: break-word;
  max-width: 400px;
}

.about-desc {
  font-size: 0.875em;
  line-height: 1.5rem;
  margin: 1.5rem auto;
}


/* IMAGES */

.about-me-img {
  padding: 10px;
  box-sizing: border-box;
  min-width: 260px;
}

.westjet {
  flex-basis: 50%;
  width: 100%;
  max-width: 400px;
}

